2006-03-09  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "x-directory/normal" an alias for
	"inode/directory".

2006-03-09  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/x-cue" a subclass of
	"text/plain". Fixes GNOME #334008. Thanks to Stefan Jol.

2006-03-02  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "text/rdf" a subclass of
	"application/xml" instead of "text/plain". Fixes GNOME #331468.
	Thanks to Luca Ferretti.

2006-03-02  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: make "application/x-abiword" a subclass of
	"application/xml". Fixes GNOME #333158/Launchpad #33301.
	Thanks to Lionel Dricot and Sebastien Bacher.

2006-03-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: also add the .divx suffix to AVI

2006-03-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add video/vnd.divx as an alias for AVI files
	(as used on the divx.com website)

2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "application/x-gnuplot". Fixes #5455.
	Thanks to Triastan Miller.

2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: fix "application/x-tex-gf" and
	"application/x-tex-pk" globs. Fixes #5373. Thanks to Jens Herden.

2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: remove "makefile*" glob from
	"text/x-makefile". Fixes #3256. Thanks to Björn Lindqvist.

2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: merge ICB and TGA into TGA MIME type, add
	some more extensions. Fixes #1276. Thanks to Filip Van Raemdonck.

2006-02-21  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add "application/x-planperfect" MIME type.
	Fixes #3148.

2006-02-20  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Add "vi" (Vietnamese) to LINGUAS.

2006-02-19  Christian Neumair  <chris@gnome-de.org>
